@@ -53,4 +53,5 @@ std::string get_current_working_dir();
 // calls N() if fails
 void change_current_working_dir(any_path const & to);
 utf8 tilde_expand(utf8 const & path);
+utf8 get_homedir();
 #endif // __PLATFORM_HH__
